SP2023-167 row render h5p row (#2)
* SP2023-167 Initial render of content type i view

* SP2023-167 order content in row

* SP2023-167 set width specified in params

* SP2023-167 paddings and width

* SP2023-167 use const/let not var and remove double class

* SP2023-167 fix row classname

* SP2023-167 remove vars from code

* Update h5p-row.js

Co-authored-by: Erik <erik.langhaug@joubel.com>

* Update h5p-row.css

Co-authored-by: Erik <erik.langhaug@joubel.com>

---------

Co-authored-by: Camtrup <amtrupcasper@gmail.com>
Co-authored-by: Erik <erik.langhaug@joubel.com>

--- a/h5p-row.css
+++ b/h5p-row.css
@@ -1,3 +1,12 @@
-.h5p-row {
-  background: salmon;
+.h5p-row-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.h5p-row-content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
