LB-135 handle responsivneess first iteration (#17)
* LB-135 responsive mobile for view

* LB-135 Increase max-width for breakpoint

---------

Co-authored-by: Erik Langhaug <erik.langhaug@h5p.group>

--- a/h5p-row.css
+++ b/h5p-row.css
@@ -10,3 +10,13 @@
   flex-direction: column;
   width: 100%;
 }
+
+@media (max-width: 480px) {
+  .h5p-row-wrapper {
+    flex-direction: column;
+  }
+
+  .h5p-row-content {
+    width: 100% !important;
+  }
+}
