--- a/h5p-row.css
+++ b/h5p-row.css
@@ -2,13 +2,13 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .h5p-row-content {
+  flex: 1;
   display: flex;
   flex-direction: column;
-  width: 100%;
 }
 
 @media (max-width: 480px) {
