--- a/h5p-row.css
+++ b/h5p-row.css
@@ -2,7 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .h5p-row-content {
