--- a/h5p-row.css
+++ b/h5p-row.css
@@ -9,6 +9,12 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
+}
+
+.h5p-row-content.h5p-row-content-fixed-width {
+  flex-grow: 0;
+  flex-shrink: 0;
 }
 
 @media (max-width: 480px) {
